--- a/fastify/package.json
+++ b/fastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/fastify",
-  "version": "1.12.2",
+  "version": "1.12.3",
   "description": "Fastify SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -52,7 +52,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/router": "^1.10.0",
+    "@hellocoop/router": "~1.11.1",
     "dotenv": "^16.3.1",
     "fastify-plugin": "^4.5.1"
   }
