--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/express",
-  "version": "1.13.0",
+  "version": "1.14.0",
   "description": "Express SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -61,7 +61,7 @@
   "dependencies": {
     "@hellocoop/constants": "~1.1.6",
     "@hellocoop/core": "~1.4.8",
-    "@hellocoop/router": "~1.13.0",
+    "@hellocoop/router": "1.14",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
