--- a/express/package.json
+++ b/express/package.json
@@ -61,7 +61,7 @@
   "dependencies": {
     "@hellocoop/constants": "~1.1.6",
     "@hellocoop/core": "~1.4.8",
-    "@hellocoop/router": "1.14",
+    "@hellocoop/api": "~2.0.0",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
