--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -52,7 +52,7 @@
     "@types/cors": "^2.8.14",
     "@types/react": "^18.2.21",
     "eslint-config-next": "^13.5.1",
-    "next": "^13.5.1",
+    "next": "^14.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
@@ -64,7 +64,7 @@
   "dependencies": {
     "@hellocoop/core": "~1.4.8",
     "@hellocoop/react": "~3.0.1",
-    "@hellocoop/router": "~1.11.1",
+    "@hellocoop/api": "~2.0.0",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "swr": "^2.2.2"
