--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/express",
-  "version": "1.14.0",
+  "version": "1.15.0",
   "description": "Express SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -48,9 +48,9 @@
     "@hellocoop/types": "~1.1.6",
     "@playwright/test": "^1.42.1",
     "@tsconfig/node18": "^18.2.2",
-    "@types/cookie": "^0.5.2",
+    "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.20",
-    "@types/node": "^20.10.7",
+    "@types/node": "*",
     "express": "^4.18.2",
     "rimraf": "^5.0.1",
     "typescript": "^5.2.2"
@@ -60,9 +60,9 @@
   },
   "dependencies": {
     "@hellocoop/constants": "~1.1.6",
-    "@hellocoop/core": "~1.4.8",
+    "@hellocoop/helper-server": "~2.0.0",
     "@hellocoop/api": "~2.0.0",
-    "cookie": "^0.5.0",
+    "cookie": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
   }
