--- a/helper-server/package.json
+++ b/helper-server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hellocoop/core",
-  "version": "1.4.8",
-  "description": "Hellō utility functions",
+  "name": "@hellocoop/helper-server",
+  "version": "2.0.0",
+  "description": "Hellō helper functions for server",
   "source": "src/index.ts",
   "main": "dist/index.js",
   "type": "commonjs",
@@ -38,7 +38,7 @@
   "homepage": "https://www.hello.dev/docs/sdks/core-client",
   "devDependencies": {
     "@hellocoop/types": "~1.1.6",
-    "@types/node": "^18.6.2",
+    "@types/node": "*",
     "typescript": "^5.2.2"
   },
   "engines": {
