--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "exclude": ["node_modules", "**/dist"],
-  "include": ["src/*.ts"],
+  "exclude": ["node_modules","src/**/dist"],
+  "include": ["src"],
   "compilerOptions": {
       "declarationMap": true,
       "declaration": true,
@@ -10,6 +10,6 @@
       "target": "es2019",
       "jsx": "react",
       "strict": true,
-      "outDir": "./dist"
+      "outDir": "./dist",
   }
 }
